--- a/Backend/demo/src/main/resources/templates/navbar.html
+++ b/Backend/demo/src/main/resources/templates/navbar.html
@@ -1,20 +1,35 @@
-<nav th:fragment="navbarFragment" class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-	<div class="container-fluid">
-<!--		<a class="navbar-brand" href="/">SBB</a>-->
-<!--		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"-->
-<!--			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--			<span class="navbar-toggler-icon"></span>-->
-<!--		</button>-->
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-				<li class="nav-item">
-					<a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
-					<a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+<head>
+	<title>Navbar</title>
+	<link rel="stylesheet" th:href="@{/bootstrap.min.css}">
+</head>
+<body>
+<div th:fragment="navbarFragment">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Demo</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+					<a class="nav-link" href="/user/signup">sign_up</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item" sec:authorize="isAuthenticated()">
+					<a class="nav-link" href="/user/logout">Logout</a>
+				</li>
+				<li class="nav-item" sec:authorize="!isAuthenticated()">
+					<a class="nav-link" href="/user/login">Login</a>
 				</li>
 			</ul>
 		</div>
-	</div>
-</nav>
+	</nav>
+</div>
+</body>
+</html>
