--- a/Backend/demo/src/main/resources/templates/index.html
+++ b/Backend/demo/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 
 <div class="container">
     <h1>Welcome to the Home Page</h1>
+    <a href="/oauth2/authorization/google">Login with Google</a>
 </div>
 <nav th:replace="~{navbar :: navbarFragment}"></nav>
 </body>
