--- a/Backend/demo/src/main/resources/templates/login_form.html
+++ b/Backend/demo/src/main/resources/templates/login_form.html
@@ -1,5 +1,13 @@
-<html layout:decorate="~{layout}">
-<div layout:fragment="content" class="container my-3">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+	<meta charset="UTF-8">
+	<title>로그인</title>
+	<link rel="stylesheet" th:href="@{/css/style.css}">
+</head>
+<body>
+<div class="container my-3">
+	<h2>로그인</h2>
 	<form th:action="@{/user/login}" method="post">
 		<div th:if="${param.error}">
 			<div class="alert alert-danger">
@@ -7,8 +15,8 @@
 			</div>
 		</div>
 		<div class="mb-3">
-			<label for="username" class="form-label">사용자ID</label>
-			<input type="text" name="username" id="username" class="form-control">
+			<label for="userId" class="form-label">사용자ID</label>
+			<input type="text" name="username" id="userId" class="form-control">
 		</div>
 		<div class="mb-3">
 			<label for="password" class="form-label">비밀번호</label>
@@ -17,5 +25,5 @@
 		<button type="submit" class="btn btn-primary">로그인</button>
 	</form>
 </div>
-
+</body>
 </html>
