--- a/Backend/demo/src/main/resources/templates/signup_form.html
+++ b/Backend/demo/src/main/resources/templates/signup_form.html
@@ -10,7 +10,12 @@
 	<h2>회원가입</h2>
 	<form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
 		<div>
-			<label for="username">사용자ID</label>
+			<label for="id">사용자ID</label>
+			<input type="text" id="id" th:field="*{id}" />
+			<div th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></div>
+		</div>
+		<div>
+			<label for="username">닉네임</label>
 			<input type="text" id="username" th:field="*{username}" />
 			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
 		</div>
@@ -20,14 +25,14 @@
 			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 		</div>
 		<div>
-			<label for="password1">비밀번호</label>
-			<input type="password" id="password1" th:field="*{password1}" />
-			<div th:if="${#fields.hasErrors('password1')}" th:errors="*{password1}"></div>
+			<label for="password">비밀번호</label>
+			<input type="password" id="password" th:field="*{password}" />
+			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 		</div>
 		<div>
-			<label for="password2">비밀번호 확인</label>
-			<input type="password" id="password2" th:field="*{password2}" />
-			<div th:if="${#fields.hasErrors('password2')}" th:errors="*{password2}"></div>
+			<label for="confirmPassword">비밀번호 확인</label>
+			<input type="password" id="confirmPassword" th:field="*{confirmPassword}" />
+			<div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></div>
 		</div>
 		<div th:if="${#fields.hasGlobalErrors()}">
 			<p th:each="err : ${#fields.globalErrors()}" th:text="${err}"></p>
