--- a/Backend/demo/src/main/resources/templates/login_form.html
+++ b/Backend/demo/src/main/resources/templates/login_form.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="mb-3">
 			<label for="userId" class="form-label">사용자ID</label>
-			<input type="text" name="username" id="userId" class="form-control">
+			<input type="text" name="userId" id="userId" class="form-control">
 		</div>
 		<div class="mb-3">
 			<label for="password" class="form-label">비밀번호</label>
